{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 17,
  "lineage": "5125f5aa-4d51-0448-bc4d-21bfa7a257de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "Cluster-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210830056316:loadbalancer/Cluster-LB",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "Cluster-LB-1157690098.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Cluster-LB",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Cluster-LB",
            "security_groups": [
              "sg-06389513a399a7052"
            ],
            "source_security_group": "210830056316/Cluster-ALB-SG",
            "source_security_group_id": "sg-06389513a399a7052",
            "subnets": [
              "subnet-0bad062f6a5a1091c",
              "subnet-0c3ead9b0c31ecfd8"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Cluster-ALB-SG",
            "aws_subnet.public_us_east_1a",
            "aws_subnet.public_us_east_1b",
            "aws_vpc.Cluster-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Cluster-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:internet-gateway/igw-09fc31f2eccc7e37e",
            "id": "igw-09fc31f2eccc7e37e",
            "owner_id": "210830056316",
            "tags": {
              "Name": "Cluster-IGW"
            },
            "tags_all": {
              "Name": "Cluster-IGW"
            },
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "dependencies": [
            "aws_vpc.Cluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Cluster-RT-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:route-table/rtb-0bb16ada083ffcc45",
            "id": "rtb-0bb16ada083ffcc45",
            "owner_id": "210830056316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fc31f2eccc7e37e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "tags_all": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Cluster-IGW",
            "aws_vpc.Cluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Cluster-RTA-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7799c5f115d7b1e",
            "route_table_id": "rtb-0bb16ada083ffcc45",
            "subnet_id": "subnet-0c3ead9b0c31ecfd8"
          },
          "dependencies": [
            "aws_internet_gateway.Cluster-IGW",
            "aws_route_table.Cluster-RT-PUB",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.Cluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Cluster-RTA-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ab8dd5e363cfb8",
            "route_table_id": "rtb-0bb16ada083ffcc45",
            "subnet_id": "subnet-0bad062f6a5a1091c"
          },
          "dependencies": [
            "aws_internet_gateway.Cluster-IGW",
            "aws_route_table.Cluster-RT-PUB",
            "aws_subnet.public_us_east_1b",
            "aws_vpc.Cluster-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Cluster-ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:security-group/sg-06389513a399a7052",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06389513a399a7052",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Cluster-ALB-SG",
            "name_prefix": "",
            "owner_id": "210830056316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cluster-ALB-SG"
            },
            "tags_all": {
              "Name": "Cluster-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Cluster-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Cluster-server-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:security-group/sg-050398d5a73f4b47b",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050398d5a73f4b47b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Cluster-server-SG",
            "name_prefix": "",
            "owner_id": "210830056316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cluster-server-SG"
            },
            "tags_all": {
              "Name": "Cluster-server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Cluster-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:subnet/subnet-0c3ead9b0c31ecfd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ead9b0c31ecfd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210830056316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-1a"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-1a"
            },
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "dependencies": [
            "aws_vpc.Cluster-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:subnet/subnet-0bad062f6a5a1091c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad062f6a5a1091c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210830056316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-1b"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-1b"
            },
            "vpc_id": "vpc-02caa27adeed3b6f7"
          },
          "dependencies": [
            "aws_vpc.Cluster-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Cluster-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210830056316:vpc/vpc-02caa27adeed3b6f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00b8cff4a818bd013",
            "default_route_table_id": "rtb-0478be487683eaad8",
            "default_security_group_id": "sg-0c99d279bf900b01f",
            "dhcp_options_id": "dopt-0c5e8d336c988406e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02caa27adeed3b6f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0478be487683eaad8",
            "owner_id": "210830056316",
            "tags": {
              "Name": "Cluster-VPC"
            },
            "tags_all": {
              "Name": "Cluster-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}